# clonebot

./: bot.hs  clonebot.cabal  package.yaml  stack.yaml
app/: Main.hs
