name: clonebot
version: 0.1
build-type: Simple
cabal-version: >=1.18

executable clonebot
  main-is: app/Main.hs
  default-language: Haskell2010
  build-depends: base
               , text
               , network
               , async
               , mtl
               , process
               , optparse-applicative

